<resources>
    <string name="app_name">My Finances</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_transactions">Transactions</string>
    <string name="current_balance">Saldo atual</string>
    <string name="incomes">Receitas</string>
    <string name="income">Receita</string>
    <string name="expenses">Despesas</string>
    <string name="title_screen_transactions">Receitas e Despesas</string>
    <string name="new_transaction">Nova Transação</string>
    <string name="accounts">Contas</string>
    <string name="no_accounts">Parece que você ainda não tem nenhuma conta cadastrada, clique aqui para criar uma nova conta</string>
    <string name="new_account">Adicionar Nova Conta</string>
    <string name="default_value">R$ 0,00</string>
    <string name="expense">Despesa</string>
    <string name="clique_para_selecionar_a_data">Clique para selecionar a data</string>
    <string name="description">Descrição</string>
    <string name="recurrence_of_transaction">Recorrencia da transação: </string>
    <string name="account_transaction">Conta da transação</string>
    <string name="save">Salvar</string>

    <string-array name="spinner_month">
        <item>JANEIRO</item>
        <item>FEVEREIRO</item>
        <item>MARÇO</item>
        <item>ABRIL</item>
        <item>MAIO</item>
        <item>JUNHO</item>
        <item>JULHO</item>
        <item>AGOSTO</item>
        <item>SETEMBRO</item>
        <item>OUTUBRO</item>
        <item>NOVEMBRO</item>
        <item>DEZEMBRO</item>
    </string-array>

</resources>