<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment"
    android:paddingBottom="60dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_default_teal"
            app:circularflow_defaultRadius="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <View
            android:id="@+id/view_balance"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-10dp"
            android:background="@drawable/background_default_white"
            app:layout_constraintBottom_toBottomOf="@+id/button_change_balances"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_header" />

        <TextView
            android:id="@+id/text_current_balance"
            style="@style/titles_screen_home_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/current_balance"
            app:layout_constraintLeft_toLeftOf="@id/view_balance"
            app:layout_constraintTop_toTopOf="@id/view_balance" />

        <TextView
            android:id="@+id/text_value_current_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/default_value"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/text_current_balance"
            app:layout_constraintTop_toBottomOf="@id/text_current_balance" />

        <View
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="@id/text_value_current_balance"
            app:layout_constraintLeft_toLeftOf="@id/text_current_balance"
            app:layout_constraintTop_toTopOf="@id/text_current_balance" />

        <View
            android:id="@+id/view_line_balance"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey_100"
            app:layout_constraintLeft_toLeftOf="@id/view_balance"
            app:layout_constraintRight_toRightOf="@id/view_balance"
            app:layout_constraintTop_toBottomOf="@id/text_value_current_balance" />

        <TextView
            android:id="@+id/text_income"
            style="@style/titles_screen_home_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/income"
            app:drawableStartCompat="@drawable/ic_arrow_up_24"
            app:drawableTint="@color/green"
            app:layout_constraintLeft_toLeftOf="@id/view_balance"
            app:layout_constraintTop_toBottomOf="@id/view_line_balance"/>

        <TextView
            android:id="@+id/text_value_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/default_value"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_income"
            app:layout_constraintRight_toRightOf="@id/view_balance"
            app:layout_constraintTop_toTopOf="@id/text_income"/>

        <TextView
            android:id="@+id/text_expenses"
            style="@style/titles_screen_home_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/expenses"
            app:drawableStartCompat="@drawable/ic_arrow_down_24"
            app:drawableTint="@color/red"
            app:layout_constraintLeft_toLeftOf="@id/view_balance"
            app:layout_constraintTop_toBottomOf="@id/text_income"/>

        <TextView
            android:id="@+id/text_value_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/default_value"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/text_expenses"
            app:layout_constraintRight_toRightOf="@id/view_balance"
            app:layout_constraintTop_toTopOf="@id/text_expenses"/>

        <Button
            android:id="@+id/button_change_balances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Alterar Saldos"
            app:layout_constraintLeft_toLeftOf="@id/view_balance"
            app:layout_constraintRight_toRightOf="@id/view_balance"
            app:layout_constraintTop_toBottomOf="@id/text_expenses"/>

        <TextView
            android:id="@+id/text_accounts_screen_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/accounts"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/recycler_accounts_screen_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_balance"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_accounts_screen_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_default_white"
            android:paddingHorizontal="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_accounts_screen_home" />

        <TextView
            android:id="@+id/text_new_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_default_white"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_accounts_screen_home"
            android:text="@string/new_account"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/teal_200"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
