<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    tools:context=".ui.transactions.TransactionsFragment">



    <TextView
        android:id="@+id/text_current_balance_screen_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/current_balance"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text_value_current_balance_screen_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_current_balance_screen_transactions"
        app:layout_constraintStart_toStartOf="@id/text_current_balance_screen_transactions"
        app:layout_constraintEnd_toEndOf="@id/text_current_balance_screen_transactions"
        android:textStyle="bold"
        android:text="@string/default_value"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:id="@+id/image_income_screen_transactions"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_arrow_up_24"
        app:layout_constraintTop_toBottomOf="@id/text_value_current_balance_screen_transactions"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:tint="@color/green"
        />

    <TextView
    android:id="@+id/text_income_screen_transactions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="@id/image_income_screen_transactions"
    app:layout_constraintStart_toEndOf="@id/image_income_screen_transactions"
    android:text="@string/income"
    android:textSize="18sp"/>

    <TextView
    android:id="@+id/text_value_income_screen_transactions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/text_income_screen_transactions"
    app:layout_constraintStart_toEndOf="@id/image_income_screen_transactions"
    android:text="@string/default_value"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:layout_marginEnd="20dp"
    />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toStartOf="@+id/text_expenses_screen_transactions"
        app:layout_constraintTop_toTopOf="@id/image_income_screen_transactions"
        android:src="@drawable/ic_arrow_down_24"
        app:tint="@color/red"
        />
    <TextView
    android:id="@+id/text_expenses_screen_transactions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/text_income_screen_transactions"
    android:layout_marginEnd="20dp"
    android:text="@string/expenses"
    android:textSize="18sp"

    />
    <TextView
    android:id="@+id/text_value_expenses_screen_transaction"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@+id/text_expenses_screen_transactions"
    app:layout_constraintTop_toBottomOf="@id/text_expenses_screen_transactions"
    android:text="@string/default_value"
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_marginEnd="20dp"
    android:textColor="@color/black"/>

    <View
        android:id="@+id/view_line_header_screen_transaction"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_value_expenses_screen_transaction"
        android:background="@color/grey_700"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_transactions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/view_line_header_screen_transaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button_new_transaction"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:text="+"
        android:textSize="18sp"
        android:layout_marginBottom="75dp"
        android:textColor="@color/white"
        android:background="@drawable/background_button_new_transaction"/>
</androidx.constraintlayout.widget.ConstraintLayout>